:sparkles: made general improvements to client, looks a bit better

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -8,3 +8,14 @@
  * 
  * Author Github: https://github.com/alexchomiak
  */
+body {
+    height: 100%;
+}
+
+html {
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+}
