--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -17,7 +17,7 @@
 
 // * Import page styles
 @import './pages/Home';
-
+@import './pages/Classes';
 // * Import individual component styles, you can import components here
 // * or import the scss in the component files themselves. But if you do that
 // * remember to import the globals in those individual scss files to make use of them!
