:sparkles: banner integration with API, client changes

--- a/client/src/styles/pages/_Classes.scss
+++ b/client/src/styles/pages/_Classes.scss
@@ -17,3 +17,12 @@
 .statusView {
     margin: 1rem;
 }
+
+.classListView {
+    height: 20rem;
+    overflow-y: scroll;
+}
+
+.classListing-title {
+    font-size: 1.2rem;
+}
